# WorkMate

./: .gitignore  pyproject.toml  refresh_data.py
scripts/: compare_embeddings.py  init_db.py  test_bm25.py  test_chroma.py  test_embedder.py  test_gemini_client.py  test_hybrid_retriever.py  test_notion_client.py  test_rag_smoke.py  test_retrieval.py
src/backend/: chroma_manager.py  config.py  database.py  embedder.py  gemini_client.py  prompts.py
src/backend/load/: bm25_manager.py  notion_ingestor.py
src/backend/models/: conversation.py  user.py
src/backend/notion/: block_parser.py  client.py  notion_fetcher.py  page_fetcher.py
src/backend/notion/models/: document.py
src/backend/retrieval/: hybrid_retriever.py
src/data/: notion_data.json
