[project]
name = "workmate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.7",
    "fastapi>=0.135.3",
    "google-genai>=1.72.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "rank-bm25>=0.2.2",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
